[project]
name = "mimic-build"
version = "0.1.0"
description = "MIMIC-IV PostgreSQL setup pipeline"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "tabulate>=0.9",
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

